add get chains api
